name:                pushbullet
version:             0.1.0.0
synopsis:            TODO Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/joshbohde/pushbullet
license:             BSD3
license-file:        LICENSE
author:              Josh Bohde
maintainer:          josh@joshbohde.com
copyright:           2016 Josh Bohde
category:            Acme
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  ghc-options:         -Wall
  hs-source-dirs:      src
  exposed-modules:     Pushbullet.API,
                       Pushbullet.Models.Push
                       Pushbullet.Models.PushRequest
  build-depends:       base >= 4.7 && < 5
                     , aeson (>= 0.8 && < 0.10) || == 0.11.*
                     , either == 4.4.*
                     , servant == 0.4.*
                     , servant-client == 0.4.*
                     , text == 1.2.*
                     , vector >= 0.10 && < 0.12

test-suite spec
  default-language:    Haskell2010
  ghc-options:         -Wall
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pushbullet
                     , aeson
                     , hspec
                     , QuickCheck
                     , quickcheck-instances

source-repository head
  type:     git
  location: https://github.com/joshbohde/pushbullet
